Revision history for {{$dist->name}}

Uses the change tracking convention
+ New feature.
- Removed/depricated feature.
! Bug fix.
* Place holder

{{$NEXT}}

	* Another cool change

v1.34.6   2015-09-25 06:01:53-07:00 America/Los_Angeles

	! Added the configuration requirement for Moose 2.1213 before test since I got a weird fail for older moose when it was listed as installed
	+ Added clone to the args so that passed references would stay safe for re-use
	+ Additional badge changes

v1.34.4   2015-03-31 05:30:37-07:00 America/Los_Angeles

	+ Added a .travis.yml file for TravisCI coverage and Coveralls coverage
	! Improved the manifest skip file
	+ Added badges for the README
	+ Added a Type::Tiny 1.000 requirement from 0.46
	+ Reordered the Changes file to newest to oldest

v1.34.2   2014-12-24 20:51:33-08:00 America/Los_Angeles

	+ Improved error messaging for error instance creation

v1.32.2   2014-12-22 09:24:36-08:00 America/Los_Angeles

	+ Added better error messages when build_instance fails
	+ Closed #1 in github by converting from Smart::Comments to Log::Shiras debug reporting!

v1.28.6   2014-11-26 09:19:45-08:00 America/Los_Angeles

	! Explicitly added all pre-reqs to the test phase to pass a clean build

v1.28.4   2014-11-24 11:44:50-08:00 America/Los_Angeles

	! Fixed the version to number based for systems that hate 'v'

v1.28.2   2014-10-03 08:15:15-07:00 America/Los_Angeles

	! Fixed heading level on POD
	! Added minimum Moose dependancy to eliminate CPAN testers fails

v1.26.2   2014-07-28 17:51:16-07:00 America/Los_Angeles

	! Removed the no Type::Tiny::XS since it wasn't in a differnt package that 
		passed while this one failed

v1.24.2   2014-07-28 09:06:27-07:00 America/Los_Angeles

	! Yet another attempt to fix the non zero wait status 139 segfault errors
		(On a non XS module no less)

v1.22.6   2014-07-27 07:25:31-07:00 America/Los_Angeles

	! Figured out how to turn off Type::Tiny::XS altogether in testing so that 